--- a/src/readme
+++ b/src/readme
@@ -1,2 +1,2 @@
 
-sorry but the game is so bug now that im too lazy to upload 100 files at a time, and i cant just upload a zip because its over 78 mb. sorry but you guys will have to wait for a release. 
+sorry but the game is so big now that im too lazy to upload 100 files at a time, and i cant just upload a zip because its over 78 mb. sorry but you guys will have to wait for a release. 
